@@ -13,6 +13,7 @@ May 2017 - 0.9.2.6
 - BugFix: In the others tab, the DXCC was sometime not correctly identified.
 - BugFix: Update on the DXCC widget caused no data to be shown if some columns were selected.
 - BugFix: Identification is a band was HF or VHF was not always properly done.
+- BugFix: Some improvements in data quality when exporting an ADIF file.
 - BugFix: When importing an ADIF file, if the file was not correct it was not possible to cancel the whole importing process.
 - Some minor changes on source code to optimize and improve.
 - Translations updated: Croatian (TNX M0NKC), Japanese (TNX JL3OXR) & Spanish (EA4TV).
